--- a/css/master_a-p_g_-maestra.css
+++ b/css/master_a-p_g_-maestra.css
@@ -1,1 +1,1 @@
-#u167{border-width:0px;border-color:transparent;background-color:transparent;max-width:100000px;}#u110,#u172,#u182,#u194,#u216,#u344{background-color:transparent;}#u421{border-width:0px;border-color:transparent;background-color:transparent;}
+#u167{border-width:0px;border-color:transparent;background-color:transparent;max-width:100000px;}#u695{border-width:0px;border-color:transparent;background-color:transparent;}#u710-6{display:block;vertical-align:top;}#u110,#u194,#u172,#u182,#u216,#u700,#u713{background-color:transparent;}
